tests/fixtures/pass/strict-nested-app/.chous
in app:
  allow *.ts
  strict
