tests/fixtures/fail/strict-nested-violation/.chous
in app:
  allow *.ts
  strict files
